# fire-http

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: audit.yaml  ci.yaml
examples/: catcher.rs  hello_world.rs  post.rs  read_json.rs  static_files.rs  with_file.rs  write_json.rs
examples/www/: hello_world.html
fire-http/: Cargo.toml  README.md
fire-http-api/: Cargo.toml  README.md
fire-http-api/src/: error.rs  lib.rs  request.rs  response.rs  testing.rs  util.rs
fire-http-api/src/stream/: error.rs  macros.rs  message.rs  mod.rs  poll_fn.rs  server.rs  stream.rs  streamer.rs  util.rs
fire-http-api/tests/: basic.rs  stream.rs
fire-http-codegen/: Cargo.toml
fire-http-codegen/no_tests/: api_route.rs  api_stream.rs  normal_route.rs  ws_route.rs
fire-http-codegen/src/: api.rs  api_stream.rs  args.rs  lib.rs  request_extractor.rs  resource.rs  route.rs  util.rs  ws.rs
fire-http-codegen/tests/: api_route.rs  api_stream.rs  normal_route.rs  ws_route.rs
fire-http-representation/: Cargo.toml  README.md  build.rs
fire-http-representation/src/: lib.rs  request.rs
fire-http-representation/src/body/: async_bytes_streamer.rs  async_reader.rs  body_http.rs  mod.rs  sync_reader.rs
fire-http-representation/src/header/: contenttype.rs  mod.rs  url.rs  values.rs
fire-http-representation/src/request/: builder.rs  mod.rs
fire-http-representation/src/response/: builder.rs  mod.rs
fire-http/examples/: catcher.rs  cors.rs  hello_world.rs  post.rs  read_json.rs  static_files.rs  with_file.rs  write_json.rs
fire-http/examples/www/css/: style.css
fire-http/examples/www/mgcss/: style.mgcss
fire-http/src/: data.rs  error.rs  fire.rs  lib.rs  resources.rs  server.rs  state.rs
fire-http/src/extractor/: mod.rs
fire-http/src/fs/: caching.rs  file.rs  memory_files.rs  mod.rs  partial_file.rs  static_files.rs
fire-http/src/graphql/: graphiql.html  graphiql.rs  mod.rs
fire-http/src/into/: into_response.rs  into_route.rs  mod.rs  route_result.rs
fire-http/src/json/: mod.rs
fire-http/src/macros/: mod.rs
fire-http/src/routes/: catcher.rs  mod.rs  path_params.rs  raw_route.rs  route.rs  router.rs  util.rs
fire-http/src/util/: header.rs  mod.rs
fire-http/src/ws/: mod.rs  util.rs
fire-http/tests/: default_features.rs  fs.rs  json.rs  util.rs  ws.rs
src/: data.rs  error.rs  fire.rs  lib.rs  request.rs  service.rs
src/fs/: caching.rs  file.rs  mod.rs  partial_file.rs  static_files.rs
src/into/: into_response.rs  mod.rs  route_result.rs
src/json/: mod.rs
src/parse/: mod.rs  socket.rs
src/routes/: catcher.rs  mod.rs  raw_route.rs  route.rs
src/util/: header.rs  mod.rs
src/ws/: mod.rs
tests/: default_features.rs  fs.rs  json.rs  util.rs  ws.rs
