[package]
name = "fire-http"
description = "Http async library based on hyper and tokio"
version = "0.2.11"
authors = ["Sören Meier <info@s-me.ch>"]
repository = "https://github.com/fire-lib/fire-http"
edition = "2021"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["http1"]

json = ["serde", "serde_json", "http/json"]
fs = ["tokio/fs", "percent-encoding", "rand"]
encdec = ["http/encdec"]
http1 = ["hyper/http1"]
http2 = ["hyper/http2"]
ws = ["tokio-tungstenite", "futures-util", "base64", "sha-1"]

[[example]]
name = "write_json"
required-features = ["json"]

[[example]]
name = "read_json"
required-features = ["json"]

[[example]]
name = "with_file"
required-features = ["fs"]

[[example]]
name = "static_files"
required-features = ["fs"]

[[test]]
name = "json"
required-features = ["json"]

[[test]]
name = "fs"
required-features = ["fs"]

[[test]]
name = "ws"
required-features = ["ws"]

[dependencies]
http = { package = "fire-http-representation", version = "0.1.6", features = ["hyper_body", "timeout"] }
hyper = { version = "0.14", features = ["tcp", "server"] }
bytes = "1.0"
hyper_http = { package = "http", version = "0.2" }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1.0", optional = true }
percent-encoding = { version = "2.1", optional = true }
rand = { version = "0.8", optional = true }
log-to-stdout = { package = "fire-log-to-stdout", version = "0.1" }
tokio-tungstenite = { version = "0.17", default-features = false, optional = true }
futures-util = { version = "0.3.5", default-features = false, optional = true }
base64 = { version = "0.13", optional = true }
sha-1 = { version = "0.10", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["tcp", "server", "client"] }