[package]
name = "fire-http-api"
description = "Make web apis"
version = "0.3.1"
authors = ["Sören Meier <info@soerenmeier.ch>"]
repository = "https://github.com/fire-lib/fire-http"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["web-programming"]
rust-version = "1.69"

[features]
stream = ["fire/ws", "codegen/stream"]
## Trace logging is only enabled with this feature
trace = []
testing = []

[[test]]
name = "basic"
required-features = ["testing"]

[dependencies]
serde = "1.0"
fire = { package = "fire-http", version = "0.4", path = "../fire-http", features = [
    "json",
] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["macros"] }
tracing = "0.1"
codegen = { package = "fire-http-codegen", version = "0.2", path = "../fire-http-codegen", features = [
    "api",
] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
tracing-test = "0.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
