[package]
name = "fire-http-api"
description = "Make web apis"
version = "0.4.0"
authors = ["Sören Meier <info@soerenmeier.ch>"]
repository = "https://github.com/fire-lib/fire-http"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["web-programming"]
rust-version = "1.74"

[features]
stream = ["fire/ws", "codegen/stream"]
## Trace logging is only enabled with this feature
trace = []
testing = []

[[test]]
name = "basic"
required-features = ["testing"]

[[test]]
name = "stream"
required-features = ["testing", "stream"]

[dependencies]
serde = "1.0"
fire = { package = "fire-http", version = "0.5.0", path = "../fire-http", features = [
	"json",
] }
# just to make sure we got the right version
representation = { package = "fire-http-representation", version = "0.4.0", path = "../fire-http-representation", features = [
	"query",
	"json",
] }
serde_json = "1.0"
tokio = { version = "1.17", features = ["macros"] }
tracing = "0.1"
codegen = { package = "fire-http-codegen", version = "0.3.0", path = "../fire-http-codegen", features = [
	"api",
] }
thiserror = "1.0.58"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
hyper = { version = "1.2", features = ["server", "client"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy"] }
tokio-tungstenite = { version = "0.23", default-features = false }
tracing-test = "0.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
