[package]
name = "fire-http-codegen"
description = "Codegen for fire http"
version = "0.1.2"
authors = ["Sören Meier <info@s-me.ch>"]
repository = "https://github.com/fire-lib/fire-http"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["web-programming"]
rust-version = "1.58"

[lib]
proc_macro = true

[[test]]
name = "ws_route"
required-features = ["ws"]

[[test]]
name = "api_route"
required-features = ["api"]

[[test]]
name = "api_stream"
required-features = ["api", "stream"]

[features]
json = []
ws = []
api = []
# requires the api feature to be set
stream = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro-crate = "1.2"

[dev-dependencies]
fire = { package = "fire-http", version = "0.3.0", path = "../fire-http", features = ["ws", "json"] }
fire-api = { package = "fire-http-api", version = "0.2.0", path = "../fire-http-api", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]