[package]
name = "fire-http-codegen"
description = "Codegen for fire http"
version = "0.3.0-beta.1"
authors = ["Sören Meier <info@s-me.ch>"]
repository = "https://github.com/fire-lib/fire-http"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["web-programming"]
rust-version = "1.69"

[lib]
proc_macro = true

[features]
json = []
ws = []
api = []
# requires the api feature to be set
stream = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro-crate = "3.1"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
