[package]
name = "fire-http"
description = "Http async library based on hyper and tokio"
version = "0.3.13"
authors = ["Sören Meier <info@soerenmeier.ch>"]
repository = "https://github.com/fire-lib/fire-http"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["web-programming"]
rust-version = "1.64"

[features]
default = ["http1"]

json = ["dep:serde", "dep:serde_json", "types/json", "codegen/json"]
fs = ["tokio/fs", "dep:percent-encoding", "dep:rand"]
http1 = ["hyper/http1"]
http2 = ["hyper/http2"]
ws = ["dep:tokio-tungstenite", "dep:futures-util", "dep:base64", "dep:sha-1", "codegen/ws"]
## GraphQl is unstable
graphql = ["json", "dep:juniper"]
## Trace logging is only enabled with this feature
trace = []

[[example]]
name = "catcher"
test = true

[[example]]
name = "cors"
test = true

[[example]]
name = "hello_world"
test = true

[[example]]
name = "post"
test = true

[[example]]
name = "read_json"
required-features = ["json"]
test = true

[[example]]
name = "static_files"
required-features = ["fs"]
test = true

[[example]]
name = "with_file"
required-features = ["fs"]
test = true

[[example]]
name = "write_json"
required-features = ["json"]
test = true

[[test]]
name = "json"
required-features = ["json"]

[[test]]
name = "fs"
required-features = ["fs"]

[[test]]
name = "ws"
required-features = ["ws"]

[dependencies]
types = { package = "fire-http-representation", version = "0.2", path = "../fire-http-representation" }
hyper = { version = "0.14", features = ["server", "runtime"] }
bytes = "1.0"
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1.0", features = ["net"] }
percent-encoding = { version = "2.1", optional = true }
rand = { version = "0.8", optional = true }
tracing = { version = "0.1" }
tokio-tungstenite = { version = "0.18", default-features = false, optional = true }
futures-util = { version = "0.3.5", default-features = false, optional = true }
base64 = { version = "0.21", optional = true }
sha-1 = { version = "0.10", optional = true }
codegen = { package = "fire-http-codegen", version = "0.1.1", path = "../fire-http-codegen" }
juniper = { version = "0.15", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["http1", "server", "client"] }
tracing-subscriber = "0.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]